--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: theme("colors.light-3");
+    border-radius: 100vh;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: theme("colors.light-2");
+    border: 1px solid red;
+  }
+
+  .scrollbar-msg::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  .scrollbar-msg::-webkit-scrollbar-track {
+    border-radius: 100vh;
+  }
+
+  .scrollbar-msg::-webkit-scrollbar-thumb {
+    background: theme("colors.light-2");
+    border-radius: 100vh;
+  }
+
+  .scrollbar-msg::-webkit-scrollbar-thumb:hover {
+    background: theme("colors.light-1");
+  }
+}
