--- a/frontend/src/pages/Home/index.module.css
+++ b/frontend/src/pages/Home/index.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply w-full min-h-screen font-mono flex flex-col justify-between;
+  @apply w-full min-h-screen flex flex-col justify-between;
 
   .header {
     @apply px-8 py-4 w-full flex flex-row justify-between items-center shadow-md shadow-highlight;
