--- a/frontend/src/components/Navlist/index.module.css
+++ b/frontend/src/components/Navlist/index.module.css
@@ -1,11 +1,7 @@
-.header {
-  @apply w-full;
-}
-
 .navList {
   @apply mt-4 mb-6 p-0 lg:mt-0 lg:mb-0 lg:p-1;
 }
 
 .navListItem {
-  @apply flex items-center gap-2 py-2 pr-4;
+  @apply flex items-center gap-2 py-2 px-4 text-sm text-primary-text-2 bg-transparent rounded-full hover:bg-primary hover:text-accent-2;
 }
