--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .app {
+    @apply w-full min-h-screen bg-primary text-primary-text-1;
+  }
+}
