--- a/frontend/src/pages/Auth/Login/index.module.css
+++ b/frontend/src/pages/Auth/Login/index.module.css
@@ -8,14 +8,10 @@
   @apply flex flex-col justify-center items-center gap-4 flex-1 p-6 md:p-12;
 }
 
-.logo {
-}
-
 /* Form Styles */
 .form {
   @apply w-full max-w-md;
 }
-
 
 .formField {
   @apply mb-4;
@@ -26,19 +22,23 @@
 }
 
 .input {
-  @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight;
+  @apply px-4 !border-0 focus:border-0 focus:shadow-sm focus:shadow-accent-2 bg-highlight text-primary-text-1 placeholder:text-primary-text-2 placeholder:opacity-100 rounded-none;
+}
+
+.labelProps {
+  @apply hidden !border-0 focus:border-0;
 }
 
 .error {
-  @apply text-red-500 text-sm italic mt-1;
+  @apply text-error text-sm italic mt-1 pl-2;
 }
 
-.extras {
-  @apply flex items-center justify-between text-primary-text-1;
+.forgotPswd {
+  @apply pt-2 pb-4 float-right text-primary-text-1 hover:text-accent-1;
 }
 
 .submitBtn {
-  @apply mt-6 bg-accent-1;
+  @apply mt-6 border-2 text-primary-text-1 border-accent-1 bg-secondary hover:bg-accent-1;
 }
 
 .registerLinkContainer {
@@ -46,7 +46,7 @@
 }
 
 .registerLink {
-  @apply px-2 font-bold text-accent-2 hover:text-primary-text-2;
+  @apply px-2 font-bold text-accent-2 hover:text-accent-1;
 }
 
 /* Cover Image Container */
