--- a/frontend/src/components/Navlist/index.module.css
+++ b/frontend/src/components/Navlist/index.module.css
@@ -3,5 +3,5 @@
 }
 
 .navListItem {
-  @apply flex items-center gap-2 py-2 px-4 text-sm text-primary-text-2 bg-transparent rounded-full hover:bg-primary hover:text-accent-2;
+  @apply mb-2 lg:mb-0 lg:border-b border-b-accent-1 hover:border-0 hover:lg:rounded-full flex items-center gap-2 py-2 px-4 text-sm text-primary-text-2 bg-transparent hover:bg-primary hover:text-accent-2 hover:cursor-pointer transition-all ease-linear duration-100;
 }
