--- a/frontend/src/components/ProfileMenu/index.module.css
+++ b/frontend/src/components/ProfileMenu/index.module.css
@@ -1,21 +1,21 @@
 .avatarBtn {
-  @apply flex items-center rounded-full p-0;
+  @apply border border-accent-2 bg-accent-1 hover:bg-accent-2 flex items-center rounded-full p-0;
 }
 
 .menuList {
-  @apply p-1;
+  @apply p-1 bg-primary border-0 shadow-sm shadow-primary-text-2;
 }
 
 .menuItem {
-  @apply flex items-center gap-2 rounded;
+  @apply text-primary-text-2 hover:text-primary-text-1 flex items-center gap-2 rounded hover:bg-accent-1 hover:bg-opacity-40;
 }
 
 .lastMenuItem {
-  @apply hover:bg-red-500/10 focus:bg-red-500/10 active:bg-red-500/10;
+  @apply hover:bg-opacity-10 focus:bg-opacity-10 active:bg-opacity-20 hover:bg-error focus:bg-error active:bg-error;
 }
 
 .signOutText {
-  @apply text-red-500;
+  @apply text-error;
 }
 
 .icon {
