--- a/frontend/src/components/MessageView/index.module.css
+++ b/frontend/src/components/MessageView/index.module.css
@@ -19,7 +19,7 @@
 }
 
 .messageContainer {
-  @apply w-full py-4 px-2 md:px-8 mx-auto flex-1 flex flex-col-reverse overflow-y-scroll drop-shadow-md;
+  @apply w-full py-4 px-2 md:px-8 mx-auto flex-1 flex flex-col overflow-y-scroll drop-shadow-md;
 
   &::-webkit-scrollbar {
     @apply w-1;
@@ -41,6 +41,18 @@
   }
 }
 
+.spinLoaderContainer {
+  @apply w-full text-accent-1 flex items-center justify-center gap-4;
+}
+
+.spinner {
+  @apply text-accent-1 h-8 w-8;
+}
+
+.noMessage {
+  @apply p-2 text-center shadow-sm shadow-accent-1 rounded-full;
+}
+
 .sendMsgForm {
   @apply w-full py-2 px-4;
 }
@@ -50,7 +62,7 @@
 }
 
 .textArea {
-  @apply min-h-full !border-0 focus:border-transparent text-primary-text-1;
+  @apply min-h-full !border-0 focus:border-transparent text-primary-text-1 bg-secondary rounded-none;
 }
 
 .containerProps {
@@ -62,5 +74,5 @@
 }
 
 .sendMsgBtn {
-  @apply bg-accent-1;
+  @apply px-4 py-2 bg-accent-1 rounded-full;
 }
