--- a/frontend/src/components/MessageCard/index.module.css
+++ b/frontend/src/components/MessageCard/index.module.css
@@ -1,20 +1,20 @@
 .messageCard {
   @apply mb-4 w-full md:w-4/5 flex flex-row gap-2;
+}
 
-  &:nth-child(odd) {
-    @apply justify-end self-end relative;
+.floatRight {
+  @apply justify-end self-end relative;
 
-    &::after {
-      @apply absolute content-[''] w-3 h-3 bg-highlight rotate-45 top-1 -right-1;
-    }
+  &::after {
+    @apply absolute content-[''] w-3 h-3 bg-highlight rotate-45 top-1 -right-1;
   }
+}
 
-  &:nth-child(even) {
-    @apply justify-start relative;
+.floatLeft {
+  @apply justify-start relative;
 
-    &::after {
-      @apply absolute content-[''] w-3 h-3 bg-highlight rotate-45 top-1 left-9;
-    }
+  &::after {
+    @apply absolute content-[''] w-3 h-3 bg-highlight rotate-45 top-1 left-9;
   }
 }
 
