--- a/frontend/src/components/MessageView/index.module.css
+++ b/frontend/src/components/MessageView/index.module.css
@@ -74,5 +74,5 @@
 }
 
 .sendMsgBtn {
-  @apply px-4 py-2 bg-accent-1 rounded-full;
+  @apply px-4 py-2 bg-accent-1 hover:bg-opacity-80 rounded-full;
 }
