--- a/frontend/src/components/MessageCard/index.module.css
+++ b/frontend/src/components/MessageCard/index.module.css
@@ -6,7 +6,7 @@
   @apply justify-end self-end relative;
 
   &::after {
-    @apply absolute content-[''] w-3 h-3 bg-highlight rotate-45 top-1 -right-1;
+    @apply absolute content-[''] w-3 h-3 bg-secondary rotate-45 top-1 -right-1;
   }
 }
 
@@ -23,11 +23,19 @@
 }
 
 .details {
-  @apply p-2 bg-highlight rounded-md;
+  @apply p-2 rounded-md;
 }
 
 .senderName {
-  @apply w-full font-bold text-sm text-accent-1;
+  @apply mb-1 w-full font-bold text-xs text-accent-1;
+}
+
+.senderBg {
+  @apply bg-secondary;
+}
+
+.nonSenderBg {
+  @apply bg-highlight;
 }
 
 .messageGroup {
@@ -35,7 +43,7 @@
 }
 
 .content {
-  @apply text-sm flex-1;
+  @apply text-sm text-primary-text-1 flex-1;
 }
 
 .timeStamp {
