--- a/frontend/src/components/MessageView/index.module.css
+++ b/frontend/src/components/MessageView/index.module.css
@@ -6,6 +6,18 @@
   @apply w-full mb-2 p-4 flex flex-row items-center gap-4 shadow-sm shadow-highlight;
 }
 
+.chatHeaderDetails {
+  @apply flex-1;
+}
+
+.typingStatus {
+  @apply text-xs text-accent-1 truncate col-span-3  lg:col-span-10;
+}
+
+.onlineStatus {
+  @apply text-xs text-primary-text-2;
+}
+
 .closeBtn {
   @apply sm:hidden px-2 py-1 text-primary-text-1;
 }
@@ -15,7 +27,7 @@
 }
 
 .chatName {
-  @apply p-1 truncate;
+  @apply truncate;
 }
 
 .messageContainer {
