--- a/frontend/src/components/ChatList/index.module.css
+++ b/frontend/src/components/ChatList/index.module.css
@@ -15,7 +15,7 @@
 }
 
 .search {
-  @apply px-2 !border-0 bg-highlight rounded-full focus:!border-0 text-primary-text-1 placeholder:text-primary-text-2 placeholder:opacity-100;
+  @apply !border-0 bg-highlight rounded-full focus:!border-0 text-primary-text-1 placeholder:text-primary-text-2 placeholder:opacity-100;
 }
 
 .containerProps {
@@ -59,4 +59,12 @@
 
 .spinner {
   @apply text-accent-1 h-8 w-8;
+}
+
+.chatListError {
+  @apply py-2 px-4 bg-secondary rounded-md flex flex-row items-center gap-4;
+}
+
+.warnIcon {
+  @apply text-warn;
 }
