--- a/frontend/src/components/UserSelect/Option/index.module.css
+++ b/frontend/src/components/UserSelect/Option/index.module.css
@@ -2,14 +2,14 @@
   @apply bg-secondary bg-opacity-50 hover:cursor-pointer;
 }
 
-.focus {
-  @apply hover:bg-opacity-100;
-}
-
 .select {
   @apply text-primary-text-1 bg-accent-1;
 }
 
 .label {
   @apply font-bold;
+}
+
+.disabled {
+  @apply opacity-50;;
 }
