Style: changes the class leave channel button from btn to leaveChannelBtn and modifed btn class for add member button

--- a/frontend/src/components/ChatInfo/index.module.css
+++ b/frontend/src/components/ChatInfo/index.module.css
@@ -73,6 +73,10 @@
   @apply w-full px-4 py-2 flex gap-4 items-center normal-case text-primary-text-1 hover:bg-secondary;
 }
 
-.btn svg {
+.leaveChannelBtn {
+  @apply w-full px-4 py-2 flex gap-4 items-center normal-case text-primary-text-1 hover:bg-secondary;
+}
+
+.leaveChannelBtn svg {
   @apply text-error;
 }
