--- a/frontend/src/components/ChatContent/index.module.css
+++ b/frontend/src/components/ChatContent/index.module.css
@@ -1,9 +1,9 @@
 .chatContentContainer {
-  @apply flex flex-col sm:shadow-md sm:shadow-highlight;
+  @apply flex flex-col border-r border-highlight;
 }
 
 .chatContentHeader {
-  @apply mb-2 p-4 flex flex-row items-center justify-between gap-4;
+  @apply px-4 py-2 flex flex-row items-center justify-between gap-4;
 }
 
 .menuIcon {
