Fix: fix hover styling of send button

--- a/frontend/src/components/MessageView/MessageForm/index.module.css
+++ b/frontend/src/components/MessageView/MessageForm/index.module.css
@@ -19,5 +19,5 @@
 }
 
 .sendMsgBtn {
-  @apply px-4 py-2 bg-accent-1 hover:bg-opacity-80 rounded-full;
+  @apply px-3 py-2 bg-accent-1 hover:bg-accent-1 hover:bg-opacity-80 rounded-full;
 }
