--- a/frontend/src/components/AddMember/index.module.css
+++ b/frontend/src/components/AddMember/index.module.css
@@ -11,11 +11,13 @@
 }
 
 .addMemberBody {
+  @apply w-full;
 }
 
-.addMemberFooter {
+.error {
+  @apply text-error text-sm italic mt-1 pl-2;
 }
 
 .submitBtn {
-  @apply my-4 bg-accent-1;
+  @apply my-4 text-primary-text-1 border border-accent-1 bg-accent-1 hover:bg-transparent;
 }
