Style: change scrollbar bg color

--- a/frontend/src/components/MessageView/MessagesContainer/index.module.css
+++ b/frontend/src/components/MessageView/MessagesContainer/index.module.css
@@ -12,12 +12,12 @@
 
   /* Handle */
   &::-webkit-scrollbar-thumb {
-    @apply bg-highlight rounded-md;
+    @apply bg-accent-1 bg-opacity-30 rounded-md;
   }
 
   /* Handle on hover */
   &::-webkit-scrollbar-thumb:hover {
-    @apply bg-primary-text-2;
+    @apply bg-accent-1;
   }
 }
 
