Style: change height to h-screen change min-h-screen to h-screen to keep control of scrollbar and its style to local components

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
 
 @layer base {
   .app {
-    @apply w-full min-h-screen bg-primary text-primary-text-1;
+    @apply w-full h-screen bg-primary text-primary-text-1;
+    
   }
 }
