Fix: increased z-index to remove overlapping logo

--- a/frontend/src/components/Header/index.module.css
+++ b/frontend/src/components/Header/index.module.css
@@ -1,5 +1,5 @@
 .header {
-  @apply w-full sm:w-4/5 mx-auto px-4 bg-secondary rounded-lg lg:rounded-full shadow-sm shadow-accent-1;
+  @apply w-full sm:w-4/5 mx-auto px-4 bg-secondary rounded-lg lg:rounded-full shadow-sm shadow-accent-1 z-10;
 }
 
 .navbar {
