--- a/frontend/src/pages/Home/index.module.css
+++ b/frontend/src/pages/Home/index.module.css
@@ -1,5 +1,24 @@
 .container {
-  @apply w-full min-h-screen flex flex-col items-center justify-between;
+  @apply w-full h-full flex flex-col items-center justify-between bg-gradient-to-tl from-accent-1 from-10% via-primary to-primary overflow-y-scroll pb-12;
+
+  &::-webkit-scrollbar {
+    @apply w-2 ;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    @apply bg-highlight rounded-full;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    @apply bg-primary bg-opacity-30;
+  }
 }
 
 .header {
@@ -7,15 +26,15 @@
 }
 
 .main {
-  @apply mt-24 mx-auto md:py-8 max-w-screen-xl flex flex-col md:flex-row gap-4;
+  @apply mt-32 px-4 mx-auto w-full sm:w-4/5 md:w-5/6 flex flex-col lg:flex-row gap-4;
 }
 
 .section {
-  @apply p-4 w-full md:w-1/2;
+  @apply w-full flex flex-col justify-center;
 }
 
-.image {
-  @apply mx-auto w-32 sm:w-48 md:w-64 lg:w-80 xl:w-96;
+.logo {
+  @apply mb-4;
 }
 
 .content {
@@ -23,11 +42,19 @@
 }
 
 .line1 {
-  @apply text-4xl md:text-8xl font-bold text-accent-2;
+  @apply text-primary-text-2;
 }
 
 .line2 {
-  @apply pt-2 text-2xl md:text-4xl font-bold text-accent-2;
+  @apply text-accent-1;
+}
+
+.para {
+  @apply py-4
+}
+
+.coverImg {
+  @apply w-full object-cover object-center;
 }
 
 .btn {
@@ -35,7 +62,7 @@
 }
 
 .footer {
-  @apply fixed bottom-2 bg-secondary py-2 px-4 text-center rounded-full ring-1 ring-offset-accent-1;
+  @apply fixed bottom-2 bg-secondary p-4 text-center rounded-full ring-1 ring-offset-accent-1;
 }
 
 .nameLink {
