--- a/frontend/src/components/ChatInfo/index.module.css
+++ b/frontend/src/components/ChatInfo/index.module.css
@@ -74,7 +74,7 @@
 }
 
 .leaveChannelBtn {
-  @apply w-full px-4 py-2 flex gap-4 items-center normal-case text-primary-text-1 hover:bg-secondary;
+  @apply w-full px-4 py-2 flex gap-4 items-center normal-case text-error hover:bg-secondary;
 }
 
 .leaveChannelBtn svg {
