Style: add new classes for messageListContainer and messageGroupDate for message list and message group date resp.

--- a/frontend/src/components/MessageView/MessagesContainer/index.module.css
+++ b/frontend/src/components/MessageView/MessagesContainer/index.module.css
@@ -1,5 +1,5 @@
 .messagesContainer {
-  @apply w-full py-4 px-2 md:px-8 mx-auto flex-1 flex flex-col overflow-y-scroll drop-shadow-md bg-gradient-to-r from-primary to-highlight;
+  @apply w-full py-4 px-2 md:px-8 mx-auto flex-1 overflow-y-scroll drop-shadow-md bg-gradient-to-r from-primary to-highlight;
 
   &::-webkit-scrollbar {
     @apply w-1;
@@ -19,6 +19,14 @@
   &::-webkit-scrollbar-thumb:hover {
     @apply bg-accent-1;
   }
+}
+
+.messageListContainer {
+  @apply flex flex-col
+}
+
+.messageGroupDate {
+  @apply mx-auto mb-4 p-1 bg-highlight rounded-md text-primary-text-2 text-xs;
 }
 
 .spinLoaderContainer {
