--- a/frontend/src/components/MessageView/MessageHeader/index.module.css
+++ b/frontend/src/components/MessageView/MessageHeader/index.module.css
@@ -1,17 +1,21 @@
-.chatHeader {
+.messageHeader {
   @apply w-full px-4 py-2 flex flex-row items-center gap-2 border-b border-highlight;
 }
 
-.chatHeaderDetails {
+.messageHeaderDetails {
   @apply flex-1;
 }
 
 .typingStatus {
-  @apply text-xs text-accent-1 truncate col-span-3  lg:col-span-10;
+  @apply text-xs text-accent-1 truncate;
+}
+
+.chatStatus {
+  @apply text-xs text-primary-text-2 truncate;
 }
 
 .onlineStatus {
-  @apply text-xs text-primary-text-2;
+  @apply text-xs text-accent-2 truncate;
 }
 
 .closeBtn {
