Fix: avatar shrink problem for large text message and style read-more read-less button

--- a/frontend/src/components/MessageCard/index.module.css
+++ b/frontend/src/components/MessageCard/index.module.css
@@ -19,7 +19,7 @@
 }
 
 .avatar {
-  @apply relative top-3 bg-accent-2;
+  @apply relative top-3 bg-accent-2 flex-shrink-0;
 }
 
 .details {
@@ -44,6 +44,10 @@
 
 .content {
   @apply text-sm text-primary-text-1 flex-1;
+}
+
+.toggleText {
+  @apply text-accent-1 hover:cursor-pointer;
 }
 
 .timeStamp {
