Style: change chatStatus to offline status

--- a/frontend/src/components/MessageView/MessageHeader/index.module.css
+++ b/frontend/src/components/MessageView/MessageHeader/index.module.css
@@ -10,7 +10,7 @@
   @apply text-xs text-accent-1 truncate;
 }
 
-.chatStatus {
+.offlineStatus {
   @apply text-xs text-primary-text-2 truncate;
 }
 
